# mpd-pulseaudio-sink-sync

./: Cargo.toml  README.md
src/: command.rs  main.rs  mpdctrl.rs  pulsectrl.rs
