[package]
name = "mpd-pulseaudio-sink-sync"
description = "Sync volume of multiple MPD clients to exactly one pulseaudio sink"
authors = ["SpiritCroc <dev@spiritcroc.de>"]
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "cargo"] }
env_logger = "0.11.8"
log = "0.4.27"
mpd = "0.1.0"
pulseaudio = "0.2.1"
watch = "0.2.3"
